--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   cyber-triage-cli:
     build:
@@ -17,9 +15,8 @@ services:
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - CYBERHAVEN_API_KEY=${CYBERHAVEN_API_KEY}
       - CYBERHAVEN_API_URL=${CYBERHAVEN_API_URL:-https://payclip.cyberhaven.io/public}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-east-1}
+      # Credenciales AWS eliminadas - Usando IAM Role de EC2
+      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-west-2}
       - AWS_S3_BUCKET=${AWS_S3_BUCKET:-clip-cyberhaven-upload}
       - EVIDENCE_DIR=./evidencia_temp
       - INCIDENT_DAYS_BACK=${INCIDENT_DAYS_BACK:-3}
