feat: Implement incident processing and analysis pipeline with a new database schema, incident processor, and updated configuration. --- FASE 1 ---

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ CYBERHAVEN_API_KEY=your-cyberhaven-refresh-token
 CYBERHAVEN_API_URL=https://payclip.cyberhaven.io/public
 
 AWS_S3_BUCKET=clip-cyberhaven-upload
+AWS_DEFAULT_REGION=us-west-2
 
-EVIDENCE_DIR=./evidencia_temp
-INCIDENT_DAYS_BACK=3
+INCIDENTS_DIR=./data/incidents
+
+SCAN_INTERVAL_MINUTES=30
+HOURS_BACK=24
+MAX_ANALYSIS_PER_CYCLE=10
